--- a/lab3/boxposition.css
+++ b/lab3/boxposition.css
@@ -59,3 +59,18 @@ body {
     left: 10px;
     background-color: #e91e63;
 }
+.border-test {
+    border-width: 5px; 
+    border-style: double; 
+    border-color: purple; 
+    
+    width: 300px;
+    height: 100px;
+    background-color: #ffe0b2;
+    margin-top: 40px;
+    color: #333;
+    font-weight: bold;
+    line-height: 100px;
+    border-radius: 10px;
+    text-align: center;
+}
