--- a/lab3/menu.css
+++ b/lab3/menu.css
@@ -1,4 +1,13 @@
-
+h1 {
+    text-align: center;
+    background-color: antiquewhite;
+    backface-visibility: 50%;
+}
+p {
+    text-align: center;
+    background-color: antiquewhite;
+    backface-visibility: 50%;
+}
 nav {
     background-color: #333;
     position: relative; 
@@ -53,4 +62,15 @@ nav ul li:hover > ul {
 /* Wiersze podlisty muszą być z powrotem elementami blokowymi */
 nav ul ul li {
     display: block;
+}
+
+body {
+    height: 100vh;
+    width: 100%;
+
+    background-image: url('kafelek.jpg');
+    background-repeat: repeat;         
+    background-size: 200px auto;       
+    background-position: top left;     
+
 }
