--- a/lab8/Views/Shared/_Layout.cshtml
+++ b/lab8/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lab8.styles.css" asp-append-version="true" />
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <header>
