--- a/lab8/wwwroot/css/site.css
+++ b/lab8/wwwroot/css/site.css
@@ -59,29 +59,29 @@ body {
 
 /* --- Warianty kolorystyczne (zależne od delty) --- */
 
-/* 1. Dwa rozwiązania (Sukces - Zielony) */
-.result-two {
+/* 1. (Sukces - Zielony) */
+.green {
     background-color: #d4edda;
     color: #155724;
     border: 2px solid #c3e6cb;
 }
 
-/* 2. Jedno rozwiązanie (Info - Niebieski) */
-.result-one {
+/* 2. (Info - Niebieski) */
+.blue{
     background-color: #d1ecf1;
     color: #0c5460;
     border: 2px solid #bee5eb;
 }
 
-/* 3. Brak rozwiązań (Błąd/Ostrzeżenie - Czerwony) */
-.result-none {
+/* 3. (Błąd/Ostrzeżenie - Czerwony) */
+.red {
     background-color: #f8d7da;
     color: #721c24;
     border: 2px solid #f5c6cb;
 }
 
-/* 4. Równanie tożsamościowe/Nieskończoność (Specjalny - Żółty/Złoty) */
-.result-infinity {
+/* 4. (Specjalny - Żółty/Złoty) */
+.yellow {
     background-color: #fff3cd;
     color: #856404;
     border: 2px solid #ffeeba;
