--- a/lab9/Views/Article/Edit.cshtml
+++ b/lab9/Views/Article/Edit.cshtml
@@ -7,6 +7,10 @@
 <h1>Edit</h1>
 
 <h4>Article</h4>
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,9 +38,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
+                
+                <select asp-for="Category" class="form-control" 
+                        asp-items="Html.GetEnumSelectList<lab9.Models.Category>()">
+                    <option selected="selected" value="">-- Choose category --</option>
+                </select>
+                
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -44,7 +54,4 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
