--- a/lab9/Views/Home/Index.cshtml
+++ b/lab9/Views/Home/Index.cshtml
@@ -10,5 +10,10 @@
             Przejdź do Artykułów
         </a>
     </div>
+    <div class="mt-4">
+        <a asp-controller="Category" asp-action="Index" class="btn btn-secondary btn-lg">
+            Przejdź do Kategorii
+        </a>
+    </div>
 
 </div>
