--- a/lab9/Views/Article/Details.cshtml
+++ b/lab9/Views/Article/Details.cshtml
@@ -32,14 +32,14 @@
             Image
         </dt>
         <dd class = "col-sm-10">
-            @if (!string.IsNullOrEmpty(Model.ImageName))
-            {
-                <img src="~/upload/@Model.ImageName" style="max-width: 300px;" />
+
+            @{
+                var imagePath = string.IsNullOrEmpty(Model.ImageName) 
+                    ? "/image/default.jpg" 
+                    : "/upload/" + Model.ImageName;
             }
-            else
-            {
-                <span>No Image</span>
-            }
+            <img src="@imagePath" class="img-fluid" alt="Full Image" />
+
         </dd>
     </dl>
 </div>
