--- a/lab9/Views/Article/Edit.cshtml
+++ b/lab9/Views/Article/Edit.cshtml
@@ -32,6 +32,17 @@
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
+                <div class="form-group mb-3">
+                <label class="control-label">Image:</label>
+                    <div class="mb-2">
+                        @{
+                            var imagePath = string.IsNullOrEmpty(Model.ImageName) 
+                                ? "/images/default.png" 
+                                : "/upload/" + Model.ImageName;
+                        }
+                        <img src="@imagePath" class="img-fluid" alt="Current Image" />
+                    </div>
+                </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-secondary">Back to List</a>
