--- a/lab9/Views/Home/Index.cshtml
+++ b/lab9/Views/Home/Index.cshtml
@@ -5,15 +5,21 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        <div class="mt-4">
+        <a asp-controller="Shop" asp-action="Index" class="btn btn-primary btn-lg">
+            Go to Shop
+        </a>
+    </div>
     <div class="mt-4">
-        <a asp-controller="Article" asp-action="Index" class="btn btn-primary btn-lg">
-            Przejdź do Artykułów
+        <a asp-controller="Article" asp-action="Index" class="btn btn-secondary btn-lg">
+            Go to Articles
         </a>
     </div>
     <div class="mt-4">
         <a asp-controller="Category" asp-action="Index" class="btn btn-secondary btn-lg">
-            Przejdź do Kategorii
+            Go to Categories
         </a>
     </div>
+
 
 </div>
