--- a/lab9/Views/Shared/_Layout.cshtml
+++ b/lab9/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
     </div>
 
     <div class="container">
-        @await RenderSectionAsync("DodatkowaSekcja", required: false)
+        @await RenderSectionAsync("Additional section", required: false)
     </div>
 
     <footer class="border-top footer text-muted">
