--- a/lab9/Views/Shop/Index.cshtml
+++ b/lab9/Views/Shop/Index.cshtml
@@ -11,7 +11,6 @@
             
             <div class="dropdown mb-4">
                 <button class="btn btn-outline-primary dropdown-toggle w-100" type="button" id="categoryDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    @* LOGIKA: Sprawdzamy co napisać na przycisku *@
                     @if (ViewBag.CurrentCategoryId != null)
                     {
                         var categories = ViewBag.Categories as IEnumerable<lab9.Models.Category>;
@@ -77,6 +76,12 @@
                                 <h6 class="card-subtitle mb-2 text-primary font-weight-bold">
                                  @item.Price.ToString("0.00") zł
                                 </h6>
+                                <a class="btn btn-secondary btn-lg" 
+                                asp-controller="Article" 
+                                asp-action="Details" 
+                                asp-route-id="@item.Id">
+                                Details
+                                </a>
                             </div>
                             @* <div class="card-footer bg-transparent border-top-0">
                                 <button class="btn btn-outline-success w-100" disabled>Dodaj do koszyka</button>
