--- a/lab9/Views/Shop/Index.cshtml
+++ b/lab9/Views/Shop/Index.cshtml
@@ -50,7 +50,13 @@
         </div>
 
         <div class="col-md-9">
-            <h4 class="mb-3">Articles</h4>
+            @* Nagłówek i przycisk przejścia do koszyka *@
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="mb-0">Articles</h4>
+                <a asp-controller="Shop" asp-action="Cart" class="btn btn-info">
+                    🛒 Go to Cart
+                </a>
+            </div>
             
             @if (!Model.Any())
             {
@@ -83,9 +89,9 @@
                                 Details
                                 </a>
                             </div>
-                            @* <div class="card-footer bg-transparent border-top-0">
-                                <button class="btn btn-outline-success w-100" disabled>Dodaj do koszyka</button>
-                            </div> *@
+                            <form asp-controller="Shop" asp-action="AddToCart" asp-route-id="@item.Id" method="post">
+                                <button type="submit" class="btn btn-outline-success w-100">Dodaj do koszyka</button>
+                            </form>
                         </div>
                     </div>
                 }
