--- a/lab8/Views/Shared/_Layout.cshtml
+++ b/lab8/Views/Shared/_Layout.cshtml
@@ -28,6 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
+
+                    <span class="navbar-text">
+                        Session ID: <strong >@Context.Session.Id</strong>
+                    </span>
                 </div>
             </div>
         </nav>
