--- a/lab9/Views/Shop/Cart.cshtml
+++ b/lab9/Views/Shop/Cart.cshtml
@@ -100,7 +100,9 @@
                 </div>
                 
                 <div class="mt-4 text-end">
-                    <button class="btn btn-primary btn-lg">Checkout</button>
+                    <a asp-controller="Shop" asp-action="Order" class="btn btn-primary btn-lg px-5">
+                        Złóż zamówienie                                                                   
+                    </a>
                 </div>
             }
         </div>
