--- a/lab9/Views/Shop/Order.cshtml
+++ b/lab9/Views/Shop/Order.cshtml
@@ -30,6 +30,7 @@
 
     @* Formularz danych osobowych i dostawy (Punkt 5) *@
     <form asp-action="ConfirmOrder" method="post" class="row g-3">
+        <input type="hidden" asp-for="TotalPrice" />
         <div class="col-md-6">
             <label class="form-label">Imię i Nazwisko</label>
             <input asp-for="FullName" class="form-control" required />
